Fixed some of the alignment issues for displaying all the cards.

--- a/everymundohw/src/styling/CustomCard.css
+++ b/everymundohw/src/styling/CustomCard.css
@@ -4,6 +4,7 @@
     margin: 25px;
     padding: -20px;
     box-shadow: 10px 10px 10px 10px; 
+    display: inline-block;
 }
 
 .header-block {
